feat: refactor login component to use reactive form and update app configuration
BREAKING CHANGE: Update AuthEffects to use inject and remove unused effects.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet />
+<!-- Always visible content -->
+<div>asd</div>
+
+<!-- Router outlet to display all components -->
+<router-outlet></router-outlet>
