--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -15,7 +15,9 @@
     border-radius: 16px;
     background: #d4d4d4;
     box-shadow:  13px 13px 26px #9b9b9b,
-    -13px -13px 26px #ffffff;
+                 -13px -13px 26px #ffffff;
+    display: flex;
+    flex-direction: column;
 
     .card__title {
       font-size: 36px;
@@ -36,7 +38,6 @@
       display: flex;
       flex-direction: column;
       gap: 16px;
-
       .card__form_input {
         width: 100%;
         height: 40px;
