--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -102,6 +102,14 @@
                       inset -5px -5px 10px #bec6ca;
         }
       }
+
+      .card__form_error {
+        width: 100%;
+        color: #df1947;
+        font-size: 16px;
+        font-weight: 600;
+        text-align: center;
+      }
     }
 
     .card__section {
