chore: updated form component and added binding fields value to variables

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,15 +6,16 @@
       </div>
       <div class="card__divider"></div>
       <div class="card__form">
-        <form (ngSubmit)="onLogin(username.value, password.value)" class="card__form">
-          <div class="card__form_input username_input">
-            <input type="text" #username placeholder="Username" required />
+        <div class="card__form">
+          <div class="card__form_input">
+            <input type="text" [(ngModel)]="username" placeholder="Username" required />
           </div>
-          <div class="card__form_input password_input">
-            <input type="password" #password placeholder="Password" required />
+          <div class="card__form_input">
+            <input type="password" [(ngModel)]="password" placeholder="Password" required />
           </div>
-          <button type="submit" class="card__form_button">Login</button>
-        </form>
+          <button class="card__form_button" (click)="login()">Login</button>
+          <div class="card__form_error" *ngIf="errorMessage">{{ errorMessage }}</div>
+        </div>
       </div>
     </div>
     <div class="card-footer">
