--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<p>dashboard works!</p>
+<main>
+  <div class="container">
+    <div class="header">
+      <span class="header__title">
+        <span class="header__title_bold">Clean</span>
+        Notes
+      </span>
+      <span class="spacer"></span>
+      <button class="header__button">Menu</button>
+    </div>
+  </div>
+</main>
