--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,13 +7,13 @@
       </span>
       <span class="spacer"></span>
       <div class="menu__wrapper">
-        <button class="header__button" (click)="isMenuOpen = !isMenuOpen">Menu</button>
+        <button class="header__button" (click)="toggleMenu($event)">Menu</button>
         <div class="menu__content" [ngClass]="{'menu__content_open': isMenuOpen}">
-          <button class="menu__content_button">Your Profile</button>
-          <button class="menu__content_button">Archive</button>
-          <button class="menu__content_button">Trash</button>
-          <button class="menu__content_button">Settings</button>
-          <button class="menu__content_button">Logout</button>
+          <button class="menu__content_button" (click)="onProfileClick()">Your Profile</button>
+          <button class="menu__content_button" (click)="onArchiveClick()">Archive</button>
+          <button class="menu__content_button" (click)="onTrashClick()">Trash</button>
+          <button class="menu__content_button" (click)="onSettingsClick()">Settings</button>
+          <button class="menu__content_button" (click)="onLogoutClick()">Logout</button>
         </div>
       </div>
     </div>
