--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<main>
+  <div class="container">
+    <div class="header">You don't have any notes yet.</div>
+    <div class="subheader">Create a new note to get started.</div>
+    <button class="action-button">
+      <div class="action-button__content">
+        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M16 5.33333V26.6667" stroke="black" stroke-width="2.66667" stroke-linecap="round"/>
+          <path d="M5.33333 16H26.6667" stroke="black" stroke-width="2.66667" stroke-linecap="round"/>
+        </svg>
+        <span>New Note</span>
+      </div>
+    </button>
+  </div>
+</main>
