--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: calc(100vh - 128px);
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -53,5 +54,28 @@
         transform: scale(0.95);
       }
     }
+  }
+
+  .create-note-dialog-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    display: flex;
+    backdrop-filter: blur(10px);
+    align-items: center;
+    justify-content: center;
+  }
+
+  .create-note-dialog {
+    width: 500px;
+    height: 300px;
+    background-color: #e6e6e6;
+    border-radius: 16px;
+    padding: 16px;
+    box-shadow: 6.5px 6.5px 13px #b8b8b8,
+                -6.5px -6.5px 13px #ffffff;
   }
 }
