chore: updated class names

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <ng-container *ngIf="(notes$ | async) as notes">
       <div *ngIf="notes.length === 0">
-        <div class="header">You don't have any notes yet.</div>
-        <div class="subheader">Create a new note to get started.</div>
-        <button class="action-button" (click)="showCreateNoteDialog()">
-          <div class="action-button__content">
+        <div class="container__header">You don't have any notes yet.</div>
+        <div class="container__subheader">Create a new note to get started.</div>
+        <button class="container__action-button" (click)="showCreateNoteDialog()">
+          <div class="container__action-button__content">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M16 5.33333V26.6667" stroke="black" stroke-width="2.66667" stroke-linecap="round"/>
               <path d="M5.33333 16H26.6667" stroke="black" stroke-width="2.66667" stroke-linecap="round"/>
@@ -14,32 +14,32 @@
           </div>
         </button>
       </div>
-      <div *ngIf="notes.length > 0">
-        <h1>Your Notes</h1>
-        <div class="notes-container">
-          <div *ngFor="let note of notes" class="note-card">
-            <h3>{{ note.title }}</h3>
-            <p>{{ note.content }}</p>
+      <div *ngIf="notes.length > 0" class="container__notes-section">
+        <div class="container__notes-section__header">Your Notes</div>
+        <div class="container__notes-section__grid">
+          <div *ngFor="let note of notes" class="container__notes-section__grid__item">
+            <h3 class="container__notes-section__grid__item__title">{{ note.title }}</h3>
+            <p class="container__notes-section__grid__item__content">{{ note.content }}</p>
           </div>
         </div>
       </div>
     </ng-container>
-    <div class="create-note-dialog-background" *ngIf="isCreateDialogOpen">
-      <div class="create-note-dialog">
-        <div class="create-note-dialog__content">
-          <button class="create-note-dialog__close-button" (click)="closeCreateDialog()">
+    <div class="container__create-dialog-background" *ngIf="isCreateDialogOpen">
+      <div class="container__create-dialog">
+        <div class="container__create-dialog__content">
+          <button class="container__create-dialog__close-button" (click)="closeCreateDialog()">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M20 12L12 20" stroke="black" stroke-width="2.66667" stroke-linecap="round"/>
               <path d="M12 12L20 20" stroke="black" stroke-width="2.66667" stroke-linecap="round"/>
             </svg>
           </button>
-          <div class="create-note-dialog__header">Create Note</div>
-          <div class="create-note-dialog__form-content">
-            <div class="card__form_input">
+          <div class="container__create-dialog__header">Create Note</div>
+          <div class="container__create-dialog__form">
+            <div class="container__create-dialog__form__input">
               <input type="text" [(ngModel)]="noteTitle" placeholder="Note Title (optional)" required />
             </div>
-            <button class="card__form_button" (click)="createNote()">Create Note</button>
-            <div class="card__form_error" *ngIf="errorMessage">{{ errorMessage }}</div>
+            <button class="container__create-dialog__form__button" (click)="createNote()">Create Note</button>
+            <div class="container__create-dialog__form__error" *ngIf="errorMessage">{{ errorMessage }}</div>
           </div>
         </div>
       </div>
