--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -1,12 +1,14 @@
 .container {
   width: 100%;
-  height: calc(100vh - 128px);
+  min-height: 100vh;
   display: flex;
   position: relative;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 8px;
+  padding: 64px 0;
+  overflow-y: auto;
 
   &__header {
     font-size: 36px;
@@ -210,7 +212,7 @@
         border-radius: 16px;
         box-shadow: 6px 6px 12px #b3b3b3,
                     -6px -6px 12px #f5f5f5;
-        padding: 20px;
+        padding: 12px;
         width: 280px;
         transition: all 0.3s ease;
 
@@ -224,12 +226,26 @@
           font-weight: 600;
           margin-bottom: 12px;
           color: #333;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        &__underline {
+          height: 1px;
+          background-color: #333;
+          margin-bottom: 12px;
         }
 
         &__content {
           font-size: 16px;
           color: #555;
           line-height: 1.5;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 8; // Approximately 200 characters
+          -webkit-box-orient: vertical;
         }
       }
     }
