--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -202,10 +202,24 @@
     }
 
     &__grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 24px;
-      justify-content: center;
+      -webkit-column-count: 3;
+      -moz-column-count: 3;
+      column-count: 3;
+      -webkit-column-gap: 1rem;
+      -moz-column-gap: 1rem;
+      column-gap: 1rem;
+
+      @media (max-width: 768px) {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+      }
+
+      @media (max-width: 480px) {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+      }
 
       &__item {
         background-color: #d4d4d4;
@@ -213,8 +227,11 @@
         box-shadow: 6px 6px 12px #b3b3b3,
                     -6px -6px 12px #f5f5f5;
         padding: 12px;
-        width: 280px;
+        width: 100%;
+        display: inline-block;
+        margin-bottom: 1rem;
         transition: all 0.3s ease;
+        box-sizing: border-box;
 
         &:active {
           box-shadow: inset 6px 6px 12px #b3b3b3,
@@ -244,7 +261,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
           display: -webkit-box;
-          -webkit-line-clamp: 8; // Approximately 200 characters
+          -webkit-line-clamp: 8;
           -webkit-box-orient: vertical;
         }
       }
