--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -241,7 +241,7 @@
         &__title {
           font-size: 20px;
           font-weight: 600;
-          margin-bottom: 12px;
+          margin-bottom: 6px;
           color: #333;
           white-space: nowrap;
           overflow: hidden;
@@ -266,5 +266,13 @@
         }
       }
     }
+  }
+
+  &__notes-section__grid__item__title--new {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 0;
+    gap: 8px;
   }
 }
