--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="container">
     <div class="toolbar">
-      <button class="toolbar__button">
+      <button class="toolbar__button" (click)="updateNote()" [disabled]="isLoading">
         <span class="toolbar__button_icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/>
